--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 Not Found</title>
+    <title><%= error_title %></title>
     <style>
         body {
             display: flex;
@@ -30,8 +30,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>404</h1>
-        <p>Oops! The page you are looking for does not exist.</p>
+        <h1><%= status_code %></h1>
+        <p><%= error %></p>
     </div>
 </body>
 </html>
